--- a/product.html
+++ b/product.html
@@ -23,7 +23,7 @@
   		</div>
   		<div class="input-group mb-3">
   			<span class="input-group-text">Описание:</span>
-  			<input type="text" class="form-control" id="tale" placeholder="Введите описание товара" aria-label="Username" aria-describedby="basic-addon1">
+  			<input type="text" class="form-control" id="infa" placeholder="Введите описание товара" aria-label="Username" aria-describedby="basic-addon1">
   		</div>
   		<div class="input-group mb-3">
   			<span class="input-group-text">Продавец:</span>
