--- a/table.html
+++ b/table.html
@@ -7,8 +7,13 @@
     <title></title>
   </head>
   <body>
-    <div class='container'>
+    <div class='pers'>
       {{user}}
+      <div>
+        <a class="btn-blue" href="/product">загрузить товар</a>
+      </div>
+    </div>
+    <div class='container'>
       {% for i in range(10)%}
       <div class='row'>
         {%for J in range(4)%}
